survey and NASA linked

--- a/writeup/HW2_elibol_cha.tex
+++ b/writeup/HW2_elibol_cha.tex
@@ -99,7 +99,7 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
     ID               & preference                \\\hline
  $3234$ &   CM      \\ \hline
 \end{tabular}
-\caption{Examples of our log entries}
+\caption{Example log entries of a participant}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -120,7 +120,12 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
    Number and gender partitions of participants; computer specifications; screen size
    \\
    \textit{- Design choices that weren't clear in the paper that we had to figure out on your own:}
-   Methods of pointing (mouse, trackball, touchpad, joystick?) ;	Mouse acceleration;	Display of time ;	Presentation methods of instruction (``as quickly and accurately as possible");	Audible deep sound;	Definition of error rate (CMs inherently has a smaller number of TOTAL clicks if we include 'tab click' into 'total click.' In Ribbon, tab click should not be included in TOTAL clicks) 
+   Methods of pointing (mouse, trackball, touchpad, joystick?) 
+;	Mouse acceleration
+;	Display of time 
+;	Presentation methods of instruction (``as quickly and accurately as possible")
+;	Audible deep sound
+;	Definition of error rate (CMs inherently has a smaller number of TOTAL clicks if we include 'tab click' into 'total click.' In Ribbon, tab click should not be included in TOTAL clicks) 
 
    \end{itemize}
 
@@ -129,7 +134,11 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
    \item \textbf{\textit{Threat to internal validity; can we mitigate them?; how}} \\
    If we were to perform this experiment throughout a week (not all on the same day), other external factors could threat internal validity. In order to mitigate potential threat to internal validity, we can try to perform experiments the same time of days, same location (find an office, not a lounge? or maybe we will intentionally have it in the lounge so reasonable level of noise is introduced to participants), same lighting,  same computer, same mouse, and keyboard, same tasks, same training
    \item \textbf{\textit{Threat to external validity; can we mitigate them?; how}} \\
-   Just doing the experiment, not other tasks (email, doc edits, etc) - cannot be mitigated at least for mimicing the study 2;	all location settings may be too constrained. overly artificial?;	1) chose a task that was a good match for the kinds of activities they had observed in the field. - most ppl like to work in a moderately quite environment. office is perfect! or we can say most ppl work in an env where some noise is introduced...;	2) chose participants for the study that were as close as possible to those they studied in the field: good gender balance, ethnicity, age, etc;	3) assessed the similarity of the behaviors b/w the lab and the field. - nah 
+   Just doing the experiment, not other tasks (email, doc edits, etc) - cannot be mitigated at least for mimicing the study 2
+;	all location settings may be too constrained. overly artificial?
+;	1) chose a task that was a good match for the kinds of activities they had observed in the field. - most ppl like to work in a moderately quite environment. office is perfect! or we can say most ppl work in an env where some noise is introduced...
+;	2) chose participants for the study that were as close as possible to those they studied in the field: good gender balance, ethnicity, age, etc
+;	3) assessed the similarity of the behaviors b/w the lab and the field. - nah 
 \end{itemize} 
  
 \begin{figure}[tbh]
@@ -140,10 +149,51 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
 \end{figure}
 
 %
-%?	Independent variables: %o	Interface (layout of tabs)%?	Dependent variables: %o	Selection time (seconds)%o	Error rate (proportion)%o	NASA-TLX measures [1,5] (mental demand, physical demand, temporal demand, hard work, frustration)%o	Preference (Ribbon vs. CommandMaps)%?	Control variables: %o	User's familiarity in MS Word - knowledgeable%o	Resolution%o	Computer specs%o	Screen size%o	%?	Random variables: %o	Weather%o	Temperature in the room%o	Vision power of a participant%o	Reaction rate of a participant%o	Noise level%o	Usual versions of MS Word that a participant uses
-%%?	Anything changed from what's described in the paper?%o	Number and partitions of participants%o	Computer specifications%o	Screen size
-%%?	Any design choices that weren't clear in the paper that you had to figure out on your own?%o	Methods of pointing (mouse, trackball, touchpad, joystick?) %o	Mouse acceleration%o	Display of time %o	Presentation of instruction "as quickly and accurately as possible"%o	Audible deep sound%o	Definition of error rate %?	CMs inherently has a smaller number of TOTAL clicks if we include 'tab click' into 'total click'%?	In Ribbon, tab click should not be included in TOTAL clicks 
-%%?	Threats to internal validity (Are observed results actually caused by the independent variables?); can we mitigate them?; how?%o	If we were to perform this experiment throughout a week (not all on the same day), other external factors could threat internal validity%o	How to mitigate: try to perform the experiments same time of days, same location (find an office, not a lounge), same lighting,  same computer, same mouse, and keyboard, same tasks, same training%?	Threats to external validity (whether the effect we see can be generalized to the world outside the lab); can we mitigate them?; how?%o	just doing the experiment, not other tasks (email, doc edits, etc) - cannot be mitigated at least for mimicing the study 2%o	all location settings may be too constrained. overly artificial?%o	1) chose a task that was a good match for the kinds of activities they had observed in the field. - most ppl like to work in a moderately quite environment. office is perfect!%o	2) chose participants for the study that were as close as possible to those they studied in the field: good gender balance, ethnicity, age, etc%o	3) assessed the similarity of the behaviors b/w the lab and the field. - nah 
+%?	Independent variables: 
+%o	Interface (layout of tabs)
+%?	Dependent variables: 
+%o	Selection time (seconds)
+%o	Error rate (proportion)
+%o	NASA-TLX measures [1,5] (mental demand, physical demand, temporal demand, hard work, frustration)
+%o	Preference (Ribbon vs. CommandMaps)
+%?	Control variables: 
+%o	User's familiarity in MS Word - knowledgeable
+%o	Resolution
+%o	Computer specs
+%o	Screen size
+%o	
+%?	Random variables: 
+%o	Weather
+%o	Temperature in the room
+%o	Vision power of a participant
+%o	Reaction rate of a participant
+%o	Noise level
+%o	Usual versions of MS Word that a participant uses
+%
+%?	Anything changed from what's described in the paper?
+%o	Number and partitions of participants
+%o	Computer specifications
+%o	Screen size
+%
+%?	Any design choices that weren't clear in the paper that you had to figure out on your own?
+%o	Methods of pointing (mouse, trackball, touchpad, joystick?) 
+%o	Mouse acceleration
+%o	Display of time 
+%o	Presentation of instruction "as quickly and accurately as possible"
+%o	Audible deep sound
+%o	Definition of error rate 
+%?	CMs inherently has a smaller number of TOTAL clicks if we include 'tab click' into 'total click'
+%?	In Ribbon, tab click should not be included in TOTAL clicks 
+%
+%?	Threats to internal validity (Are observed results actually caused by the independent variables?); can we mitigate them?; how?
+%o	If we were to perform this experiment throughout a week (not all on the same day), other external factors could threat internal validity
+%o	How to mitigate: try to perform the experiments same time of days, same location (find an office, not a lounge), same lighting,  same computer, same mouse, and keyboard, same tasks, same training
+%?	Threats to external validity (whether the effect we see can be generalized to the world outside the lab); can we mitigate them?; how?
+%o	just doing the experiment, not other tasks (email, doc edits, etc) - cannot be mitigated at least for mimicing the study 2
+%o	all location settings may be too constrained. overly artificial?
+%o	1) chose a task that was a good match for the kinds of activities they had observed in the field. - most ppl like to work in a moderately quite environment. office is perfect!
+%o	2) chose participants for the study that were as close as possible to those they studied in the field: good gender balance, ethnicity, age, etc
+%o	3) assessed the similarity of the behaviors b/w the lab and the field. - nah 
 
 \pagebreak
 
