--- a/writeup/HW2_elibol_cha.tex
+++ b/writeup/HW2_elibol_cha.tex
@@ -24,15 +24,7 @@
 %\textbf{\textit{1. Webpage URL}}\\
  www.blah.com
 \section*{Log Description} 
-
-\begin{figure}
-  \centering
-  \includegraphics[width=80mm]{command_layout1}\\
-  \caption{Our example CommandMap for Microsoft Word}
-  \label{fig:ex_commandmap}
-\end{figure}
-
- We design our logs to keep track of interface (CommandMap shown in Figure~\ref{fig:ex_commandmap} or Ribbon), tab switch (same or different),  selection time, number of incorrect clicks, and total number of clicks per a trial. As shown in Table ~\ref{fig:trial_log}, each participants are assigned to complete $90$ trials per an interface. 
+ We design our logs to keep track of interface (CommandMap shown in Figure~\ref{fig:ex_commandmap} or Ribbon), tab switch (same or different),  selection time, number of incorrect clicks, and total number of clicks per a trial. As shown in Table~\ref{fig:trial_log}, each of our participants is assigned to complete $90$ trials per an interface. We will find support for $H_1$ by evaluating mean selection time for each interface. Then, we will find support for $H_2$ by computing mean selection time and mean error rate with respect to tab switch for each interface.  
  \begin{table}[tbh]
   \centering
 \begin{tabular}{|l|c|c|c|c|c|c|c|}
@@ -50,7 +42,7 @@ $3234$  &    CM &   $90$ & same  & $1.1$ & 0 & 1 \\\hline
 \label{fig:trial_log}
 \end{table}
 
-Upon completion of each interface, participants complete NASA-TLX worksheet to evaluate workloads. Table ~\ref{fig:nasa_log} shows notional log entries for a participant. 
+Upon completion of each interface, participants complete NASA-TLX worksheet to assess workloads. Table~\ref{fig:nasa_log} shows notional log entries for NASA-TLX. At the end of an experiment, participant chooses an interface for preference. Entry logs similar to Table~\ref{fig:nasa_log} and Table~\ref{fig:pref_log} are gathered to find support for $H_3$.   
 \begin{table}[tbh]
   \centering
 \begin{tabular}{|l|c|c|c|c|c|c|c|c|}
@@ -64,7 +56,6 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
 \label{fig:nasa_log}
 \end{table}
 
-At the end of an experiment, participant chooses an interface for preference. Entry logs similar to Table ~\ref{fig:nasa_log} and Table ~\ref{fig:pref_log} are gathered to evaluate $H_3$.   
 \begin{table}[tbh]
   \centering
 \begin{tabular}{|l|c|c|}
@@ -104,6 +95,13 @@ At the end of an experiment, participant chooses an interface for preference. En
    \item \textbf{\textit{Threat to external validity; Can we mitigate them?; How?}} \\
    Simply performing the experimental task of clicking command targets may not generalize to the world outside the lab that tends to include performing other additional tasks (e.g., email, doc edits, web browsing); For the purpose of replicating Study 2, this concern cannot be mitigated. It would be ideal if we can assess the similarity of the behaviors between the lab and the field but it is beyond the scope of Study 2.  However, we plan to conduct an experiment in a realistic environmental setting (e.g., MD office). In order to mitigate potential external validity on gender imbalance (in the original experiment, the proportion of male to female was 8 to 1), we plan to recruit male and female participants who are knowledge to MS Word with a near equal number. 
    \end{itemize} 
+   
+\begin{figure}[tbh]
+  \centering
+  \includegraphics[width=100mm]{command_layout1}\\
+  \caption{Our example CommandMap for Microsoft Word}
+  \label{fig:ex_commandmap}
+\end{figure}
 \pagebreak
 
 \end{document}
