--- a/writeup/HW2_elibol_cha.tex
+++ b/writeup/HW2_elibol_cha.tex
@@ -21,8 +21,7 @@
 \maketitle
 
 \section*{Webpage URL}
-%\textbf{\textit{1. Webpage URL}}\\
- www.blah.com
+http://50.56.219.32
 \section*{Log Description} 
  We design our logs to keep track of interface (CommandMap shown in Figure~\ref{fig:ex_commandmap} or Ribbon), tab switch (same or different),  selection time, number of incorrect clicks, and total number of clicks per a trial. As shown in Table~\ref{fig:trial_log}, each of our participants is assigned to complete $90$ trials per an interface. We will find support for $H_1$ by evaluating mean selection time for each interface. Then, we will find support for $H_2$ by computing mean selection time and mean error rate with respect to tab switch for each interface.  
  \begin{table}[tbh]
@@ -79,13 +78,13 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
     \item \textbf{\textit{Control variables:}} \\
    User's familiarity in MS Word 2007, resolution, computer specs, and screen size
    \item \textbf{\textit{Random variables:}} \\
-   Weather, temperature in the room, vision power of a participant, reaction rate of a participant, noise level, usual versions of MS Word that a participant uses
+   Weather, temperature in the room, vision power of a participant, reaction rate of a participant, noise level, and usual versions of MS Word that a participant uses
    \item \textbf{\textit{Design modification:}} \\
    \textit{- Design modifications from what's described in the paper:}
-   Number and gender partitions of participants, computer specifications, and screen size
+   Number and gender partitions of participants, computer specifications, screen size, and `correct' sound component in addition to `incorrect' sound.
    \\
    \textit{- Design choices that weren't clear in the paper that we had to figure out on your own:}
-   Methods of pointing (mouse, trackball, touchpad, joystick?), mouse acceleration, display of time, presentation methods of an instruction (``as quickly and accurately as possible"), audible deep sound, definition of error rate (CM inherently has a smaller number of total clicks if we include `tab clicks' into `total number of clicks.' Therefore, for Ribbon, we do not count 'tab clicks' into `total number of clicks'.) 
+   Methods of pointing (mouse, trackball, touchpad, joystick?), mouse acceleration, display of time, presentation methods of an instruction (``as quickly and accurately as possible"), audible deep sound, definition of error rate (CM inherently has a smaller number of total clicks if we include `tab clicks' into `total number of clicks.' Therefore, for Ribbon, we only count `command target clicks' into `total number of clicks'.) 
    \end{itemize}
 
 \section*{Internal and External Validities}  
