--- a/writeup/HW2_elibol_cha.tex
+++ b/writeup/HW2_elibol_cha.tex
@@ -28,14 +28,14 @@ http://50.56.219.32
   \centering
 \begin{tabular}{|l|c|c|c|c|c|c|c|}
   \hline
- ID &  Interface  &  Trial &  Tab switch & selection time & \# of incorrect clicks & \# of Total clicks              \\\hline
- $3234$ &   Ribbon  & $1$  & same  & $1.42$ & 0  &1 \\ \hline
+ ID &  Interface  &  Trial &  # of tab switches & selection time & \# of incorrect clicks & \# of Total clicks              \\\hline
+ $3234$ &   Ribbon  & $1$  & 1  & $1.42$ & 0  &1 \\ \hline
 %$3234$  &    ribbon &   $2$ & same  & $1.23$ & 0 &1  \\\hline       
 $3234$  &    Ribbon &   $...$ & ...  & ... &  ... & ...\\\hline       
-$3234$  &    Ribbon &   $90$ & different  & $2.4$ &2  &3 \\\hline      
-$3234$  &    CM &   $1$ & different  & $1.2$ & 0 & 1 \\\hline   
+$3234$  &    Ribbon &   $90$ & 2  & $2.4$ &2  &3 \\\hline      
+$3234$  &    CM &   $1$ & 0  & $1.2$ & 0 & 1 \\\hline   
 $3234$  &    CM &   $...$ & ...  & ... &  ... & ...\\\hline   
-$3234$  &    CM &   $90$ & same  & $1.1$ & 0 & 1 \\\hline  
+$3234$  &    CM &   $90$ & 0  & $1.1$ & 0 & 1 \\\hline  
 \end{tabular}
 \caption{Example of log entries per a trial}
 \label{fig:trial_log}
