edited and compiled

--- a/writeup/HW2_elibol_cha.tex
+++ b/writeup/HW2_elibol_cha.tex
@@ -23,16 +23,16 @@
 \section*{Webpage URL}
 http://50.56.219.32
 \section*{Log Description} 
- We design our logs to keep track of interface (CommandMap shown in Figure~\ref{fig:ex_commandmap} or Ribbon), tab switch (same or different),  selection time, number of incorrect clicks, and total number of clicks per a trial. As shown in Table~\ref{fig:trial_log}, each of our participants is assigned to complete $90$ trials per an interface. We will find support for $H_1$ by evaluating mean selection time for each interface. Then, we will find support for $H_2$ by computing mean selection time and mean error rate with respect to tab switch for each interface.  
+ We design our logs to keep track of interface (CommandMap shown in Figure~\ref{fig:ex_commandmap} or Ribbon), number of tab switches (same: 0 or different: 1),  selection time, number of incorrect clicks, and total number of clicks per a trial. As shown in Table~\ref{fig:trial_log}, each of our participants is assigned to complete $90$ trials per an interface. We will find support for $H_1$ by evaluating mean selection time for each interface. Then, we will find support for $H_2$ by computing mean selection time and mean error rate with respect to tab switch for each interface.  
  \begin{table}[tbh]
   \centering
 \begin{tabular}{|l|c|c|c|c|c|c|c|}
   \hline
- ID &  Interface  &  Trial &  # of tab switches & selection time & \# of incorrect clicks & \# of Total clicks              \\\hline
- $3234$ &   Ribbon  & $1$  & 1  & $1.42$ & 0  &1 \\ \hline
+ ID &  Interface  &  Trial &  \# of tab switches & selection time & \# of incorrect clicks & \# of Total clicks              \\\hline
+ $3234$ &   Ribbon  & $1$  & 0  & $1.42$ & 0  &1 \\ \hline
 %$3234$  &    ribbon &   $2$ & same  & $1.23$ & 0 &1  \\\hline       
 $3234$  &    Ribbon &   $...$ & ...  & ... &  ... & ...\\\hline       
-$3234$  &    Ribbon &   $90$ & 2  & $2.4$ &2  &3 \\\hline      
+$3234$  &    Ribbon &   $90$ & 1  & $2.4$ &2  &3 \\\hline      
 $3234$  &    CM &   $1$ & 0  & $1.2$ & 0 & 1 \\\hline   
 $3234$  &    CM &   $...$ & ...  & ... &  ... & ...\\\hline   
 $3234$  &    CM &   $90$ & 0  & $1.1$ & 0 & 1 \\\hline  
@@ -92,7 +92,7 @@ $3234$  &    CM &   $2$ & 1  & $2$ & 2 &1  \\\hline
    \item \textbf{\textit{Threat to internal validity; Can we mitigate them?; How?}} \\
    If we were to perform experiments for Study 2 at anytime throughout a week, external environmental factors could threat internal validity. In order to mitigate potential threat to internal validity, we plan to perform experiments at the same time period throughout the week. Additionally, we will keep the same location, lighting, computer, mouse, keyboard, task, and presentation method of an instruction. 
    \item \textbf{\textit{Threat to external validity; Can we mitigate them?; How?}} \\
-   Simply performing the experimental task of clicking command targets may not generalize to the world outside the lab that tends to include performing other additional tasks (e.g., email, doc edits, web browsing); For the purpose of replicating Study 2, this concern cannot be mitigated. It would be ideal if we can assess the similarity of the behaviors between the lab and the field but it is beyond the scope of Study 2.  However, we plan to conduct an experiment in a realistic environmental setting (e.g., MD office). In order to mitigate potential external validity on gender imbalance (in the original experiment, the proportion of male to female was 8 to 1), we plan to recruit male and female participants who are knowledge to MS Word with a near equal number. 
+   Simply performing the experimental task of clicking command targets may not generalize to the world outside the lab that tends to include performing other additional tasks (e.g., email, doc edits, web browsing); For the purpose of replicating Study 2, this concern cannot be mitigated. It would be ideal if we can assess the similarity of the behaviors between the lab and the field but it is beyond the scope of Study 2.  However, we plan to conduct an experiment in a realistic environmental setting (e.g., MD office). In order to mitigate potential external validity on gender imbalance (in the original experiment, the proportion of male to female was 8 to 1), we plan to recruit male and female participants who are knowledge to MS Word with nearly equal numbers. 
    \end{itemize} 
    
 \begin{figure}[tbh]
