infinite loop fixed,note on browser, survey checked

--- a/writeup/HW2_elibol_cha.tex
+++ b/writeup/HW2_elibol_cha.tex
@@ -22,6 +22,9 @@
 
 \section*{Webpage URL}
 http://50.56.219.32
+ \\
+ \\
+ Please note that the webpage is best supported when a browser window is maximized. We have tested the site's compatibility with Chrome, Safari, and Firefox. 
 \section*{Log Description} 
  We design our logs to keep track of interface (CommandMap shown in Figure~\ref{fig:ex_commandmap} or Ribbon), number of tab switches (same: 0 or different: 1),  selection time, number of incorrect clicks, and total number of clicks per a trial. As shown in Table~\ref{fig:trial_log}, each of our participants is assigned to complete $90$ trials per an interface. We will find support for $H_1$ by evaluating mean selection time for each interface. Then, we will find support for $H_2$ by computing mean selection time and mean error rate with respect to tab switch for each interface.  
  \begin{table}[tbh]
